--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "cypress:run": "cypress run -C ./cypress.config.ts"
   },
   "dependencies": {
-    "@refinedev/core": "^4.44.5",
-    "@refinedev/cli": "^2.16.6",
-    "@refinedev/react-hook-form": "^4.8.10",
-    "@refinedev/react-table": "^5.6.4",
-    "@tanstack/react-table": "^8.2.6",
+    "@refinedev/cli": "^2.16.14",
+    "@refinedev/core": "^4.44.11",
+    "@refinedev/react-hook-form": "^4.8.12",
     "@refinedev/react-router-v6": "^4.5.4",
+    "@refinedev/react-table": "^5.6.4",
     "@refinedev/simple-rest": "^4.5.4",
+    "@tanstack/react-table": "^8.2.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.8.1"
@@ -25,9 +25,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "cypress": "^12.11.0",
     "typescript": "^4.7.4",
-    "vite": "^4.3.1",
-    "cypress": "^12.11.0"
+    "vite": "^4.3.1"
   },
   "version": "3.25.0"
 }
